tests/opensearch/opensearchvpcendpoint/02-mandatory-tags-config.yaml
# Copyright 2026 kropath Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# mandatory-tags config: mandatory.tags = {team: search}.
# Used in AC-9 (tags-k8s-only) to verify mandatory tags appear in ACK VPCEndpoint metadata.labels.
---
apiVersion: aws.kropath.run/v1alpha1
kind: OpenSearchConfig
metadata:
  name: mandatory-tags
  namespace: opensearchvpcendpoint
  labels:
    aws.kropath.run/resource-name: mandatory-tags
spec:
  mandatory:
    namingTemplate: ""
    tags:
      team: search
    syncedLabels: {}
    syncedAnnotations: {}
  defaults:
    namingTemplate: "{namespace}-{name}"
    tags: {}
    syncedLabels: {}
    syncedAnnotations: {}
